handlebars displaying content

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,6 +12,14 @@
 
 </head>
 <body>
+    <nav class="navbar navbar-light bg-light">
+        <a class="navbar-brand" href="#">Web Harvester</a>
+        <form class="form-inline float-right">
+            <button class="btn btn-outline-success" type="button">Scrape New Things</button>
+            <button class="btn btn-outline-secondary" type="button">Saved Articles</button>
+        </form>
+    </nav>
+    
     {{{body}}}
 </body>
 </html>
