--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,12 +2,21 @@
     <div class="row">
         <div class="col-6">
             <div class="articles">
-
+                {{#each key}}
+                <div class="article">
+                    <h4>{{this.title}}</h4>
+                    <p>{{this.url}}</p>
+                    <p>{{this.teaser}}</p>
+                </div>
+                {{/each}}
             </div>      
         </div>
         <div class="col-6">
-            <div class="notes">
-
+           <div class="notes">
+                <div class="note">
+                    <h4>Note Title</h4>
+                    <p>Note Text</p>
+                </div>
             </div>
         </div>
     </div>
