links to a tags instead of p

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,7 +5,7 @@
                 {{#each key}}
                 <div class="article">
                     <h4>{{this.title}}</h4>
-                    <p>{{this.url}}</p>
+                    <a href={{this.url}} target="_blank">Link</a>
                     <p>{{this.teaser}}</p>
                 </div>
                 {{/each}}
