click handler to show notes

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,10 +12,13 @@
             </div>      
         </div>
         <div class="col-6">
-           <div class="notes">
+           <div class="notes" style="display: none">
                 <div class="note">
-                    <h4>Note Title</h4>
-                    <p>Note Text</p>
+                    <div class="form-group">
+                        <input type="text" id="noteTitle" placeholder="Note Title">
+                        <hr>
+                        <textarea class="form-control" rows="5" id="noteText" placeholder="Note Text"></textarea>
+                    </div>
                 </div>
             </div>
         </div>
