added more button functionality

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -20,7 +20,8 @@
                             <hr>
                             <textarea class="form-control" rows="5" id="noteText" placeholder="Note Text"></textarea>
                             <button class="btn btn-outline-success" id="saveButton">Save</button>
-                            <button class="btn btn-outline-secondary" id="noteButton">Show Note</button>
+                            <button class="btn btn-outline-secondary" id="noteButton">Note</button>
+                            <button class="btn btn-outline-secondary" id="hideButton" style="display: none">Hide</button>
                         </div>
                     </div>
                 </div>    
