--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Chemistry News</title>
+    <title>News</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -16,7 +16,7 @@
     <nav class="navbar navbar-light bg-light">
         <a class="navbar-brand" href="#">Web Harvester</a>
         <form class="form-inline float-right">
-            <button class="btn btn-outline-success" type="button">Scrape New Things</button>
+            <button class="btn btn-outline-success" type="button" id="scrapeButton">Scrape New Things</button>
             <button class="btn btn-outline-secondary" type="button">Saved Articles</button>
         </form>
     </nav>
