jquery for button operation fluidity

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -28,7 +28,11 @@
             </div>
             <div class="row">
                 <div class="col-12">
+                    <button class="btn btn-outline-danger float-right" style="display: none" id="deleteButton">
+                        <i class="far fa-times-circle float-right"></i>
+                    </button>
                     <h5 id="savedNoteTitle"></h5>
+                       
                     <hr>
                     <p id="savedNoteText"></p>
                 </div>
