--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,8 +16,8 @@
     <nav class="navbar navbar-light bg-light">
         <a class="navbar-brand" href="#">Web Harvester</a>
         <form class="form-inline float-right">
-            <button class="btn btn-outline-success" type="button" id="scrapeButton">Scrape New Things</button>
-            <button class="btn btn-outline-secondary" type="button">Saved Articles</button>
+            <button class="btn btn-outline-success" type="button" id="scrapeButton">Scrape News</button>
+            {{!-- <button class="btn btn-outline-secondary" type="button">Saved Articles</button> --}}
         </form>
     </nav>
     
